@@ -1,3 +1,7 @@
+Sun Oct 28 18:51:33 2012  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* ext/date/date_parse.c (date__parse): revised the tight parser.
+
 Sun Oct 28 15:41:50 2012  Kouhei Sutou  <kou@cozmixng.org>
 
 	* lib/rexml/document.rb (REXML::Document#write): Add :encoding option
